--- a/env/.config/tmux/.tmux.conf
+++ b/env/.config/tmux/.tmux.conf
@@ -1,6 +1,9 @@
+
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
+
+set -g status-style "bg=#333333 fg=#5eacd3"
 
 unbind %
 bind | split-window -h
@@ -9,7 +12,7 @@ unbind '"'
 bind - split-window -v
 
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/.tmux.conf
 
 bind -r h resize-pane -L 5
 bind -r j resize-pane -D 5
