--- a/env/.config/hypr/hyprland.conf
+++ b/env/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ $searchMenu = rofi -dmenu -p "Search" | xargs -I{} xdg-open https://search.brave
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = waybar
 
 
 #############################
