--- a/env/.config/tmux/tmux.conf
+++ b/env/.config/tmux/tmux.conf
@@ -1,9 +1,12 @@
+set -g default-terminal "tmux-256color"
 
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
 set -g status-style "bg=#333333 fg=#5eacd3"
+
+set -ga update-environment "WAYLAND_DISPLAY XDG_RUNTIME_DIR HYPRLAND_INSTANCE_SIGNATURE"
 
 unbind %
 bind | split-window -h
