feat: waybar & hyprlock

--- a/env/.config/hypr/hyprland.conf
+++ b/env/.config/hypr/hyprland.conf
@@ -35,6 +35,7 @@ $terminal = ghostty
 $fileManager = dolphin
 $menu = rofi -show drun
 $searchMenu = rofi -dmenu -p "Search" | xargs -I{} xdg-open https://search.brave.com/search?q={\}
+$lock = hyprlock
 
 
 #################
@@ -260,6 +261,7 @@ bind = $mainMod, G, exec, $searchMenu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, L, exec, $lock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
