--- a/env/.config/ghostty/config
+++ b/env/.config/ghostty/config
@@ -1,4 +1,5 @@
 background = 000000
 background-blur = false
+background-opacity = 0.9
 confirm-close-surface = false
-font-size = 20
+font-size = 18
